WIP pagination - Ajout d'une nouvelle entitée - Ajout d'une classe de base pour les services - Ajout d'un service pour les catégories - Ajout d'une vérificateur par défaut des queries - Ajout de nouvelles routes - Ajout d'une récupération de répository "Categorie" - Mise à jour du Swagger - Ajout d'un champ dans le .env.example pour prendre en compte l'environnement
