# Api/Documentation/V1/Swagger.yaml
@@ -3,10 +3,18 @@ info:
   title: MovieAPI
   version: '1.0'
 servers:
-  - url: https://localhost:5000/api/v1
+  - url: http://localhost:5000/api/v1
+    description: Environnement local
+  - url: https://api.server.test:5000/api/v1
+    description: Environnement de test
+  - url: https://api.server.staging:5000/api/v1
+    description: Environnement de pré-production
+  - url: https://api.server.prod:5000/api/v1
+    description: Environnement de production
 
 tags:
   - name: Movies
+  - name: Categories
 
 paths:
   /movie:
@@ -23,19 +31,25 @@ paths:
           $ref: "#/components/responses/CreateMovieResponse"
 
         '404':
-          $ref: "#/components/responses/ErrorMovieResponse"
+          $ref: "#/components/responses/ErrorResponse"
 
     get:
       summary: Récupère l'ensemble des films
       operationId: getAllFilms
       tags:
         - Movies
+
+      parameters:
+        - $ref: "#/components/parameters/MovieNameParam"
+        - $ref: "#/components/parameters/LimitParam"
+        - $ref: "#/components/parameters/PageParam"
+
       responses:
         '200':
           $ref: "#/components/responses/MoviesResponse"
 
         '404':
-          $ref: "#/components/responses/ErrorMovieResponse"
+          $ref: "#/components/responses/ErrorResponse"
         
   /movie/{movieId}:
     get: 
@@ -44,14 +58,14 @@ paths:
       tags:
         - "Movies"
       parameters:
-        - $ref: "#/components/parameters/MovieParameter"
+        - $ref: "#/components/parameters/MovieIdParam"
       
       responses:
         '200':
           $ref: "#/components/responses/MovieResponse"
 
         '404':
-          $ref: "#/components/responses/ErrorMovieResponse"
+          $ref: "#/components/responses/ErrorResponse"
       
     put: 
       summary: Met à jour un film
@@ -59,17 +73,17 @@ paths:
       tags:
         - "Movies"
       parameters:
-        - $ref: "#/components/parameters/MovieParameter"
+        - $ref: "#/components/parameters/MovieIdParam"
 
       responses:
         '200':
           $ref: "#/components/responses/MovieResponse"
 
         '422':
-          $ref: "#/components/responses/ErrorMovieResponse"  
+          $ref: "#/components/responses/ErrorResponse"  
 
         '404':
-          $ref: "#/components/responses/ErrorMovieResponse"  
+          $ref: "#/components/responses/ErrorResponse"  
 
     delete:
       summary: Suppression d'un film
@@ -77,14 +91,32 @@ paths:
       tags:
         - "Movies"
       parameters:
-        - $ref: "#/components/parameters/MovieParameter"
+        - $ref: "#/components/parameters/MovieIdParam"
       responses:
       
         '200':
           $ref: "#/components/responses/ConfirmDeleteResponse"
 
         '404':
-          $ref: "#/components/responses/ErrorMovieResponse"
+          $ref: "#/components/responses/ErrorResponse"
+
+  /categorie/{categorieId}/movies:
+    get:
+      summary: Récupère un seul film selon son identifiant
+      operationId: getCategoriAndMoviesByQuery
+      tags:
+        - "Categories"
+      parameters:
+        - $ref: "#/components/parameters/CategorieIdParam"
+        - $ref: "#/components/parameters/CategorieIdParam"
+        - $ref: "#/components/parameters/CategorieIdParam"
+      
+      responses:
+        '200':
+          $ref: "#/components/responses/CategorieMoviesResponse"
+
+        '404':
+          $ref: "#/components/responses/ErrorResponse"
 
 components:
   
@@ -94,7 +126,7 @@ components:
       properties:
         id:
           type: integer
-          description: l'identifiant de l'entité "Movie"
+          description: l'identifiant du film
         name:
           type: string
           description: le nom du film
@@ -105,6 +137,27 @@ components:
           type: string
           format: date
           description: la date de parution du film
+
+    Categorie:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int32
+          description: l'identifiant de la catégorie
+        name:
+          type: string
+          description: le nom de la catégorie
+
+    CategorieMovies:
+      allOf:
+        - $ref: "#/components/schemas/Categorie"
+        - type: object
+          properties:
+            Movies:
+              type: array
+              items:
+                $ref: "#/components/schemas/Movie"
 
     BaseBodyResponse:
       type: object
@@ -131,6 +184,30 @@ components:
           example: "2024-03-12T14:00:00Z"
           description: La date à laquel la réponse à été émit
     
+    PaginationMeta:
+      allOf:
+        - $ref: "#/components/schemas/DefaultMeta"
+        - type: object
+          properties:
+            currentPage:
+              type: integer
+              format: int32
+              description: la page actuel de l'utilisateur
+            totalPages:
+              type: integer
+              format: int32
+              description: le nombre total de pages
+            totalResult:
+              type: integer
+              format: int32
+              description: le nombre de ligne total en base
+            previewPage:
+              type: string
+              description: le lien de la page précédente
+            nextPage:
+              type: string
+              description: le lien de la page suivante
+
     BaseError:
       description: Contient les informations d'une erreur émit par l'API
       type: object
@@ -218,6 +295,9 @@ components:
                         type: array
                         items:
                           $ref: '#/components/schemas/Movie'
+                  meta:
+                    type: object
+                    $ref: "#/components/schemas/PaginationMeta"
 
     ConfirmDeleteResponse:
       description: Retourne un message de confirmation de suppression
@@ -250,8 +330,24 @@ components:
                       message:
                         type: string
                         example: le film à bien été créer
-      
-    ErrorMovieResponse:
+
+    CategorieMoviesResponse:
+      description: Retoune la catégorie et les films associé
+      content:
+        application/json:
+          schema:
+            allOf:
+              - $ref: "#/components/schemas/BaseBodyResponse"
+              - type: object
+                properties:              
+                  data:
+                    type: object
+                    $ref: "#/components/schemas/CategorieMovies"
+                  meta:
+                    type: object
+                    $ref: "#/components/schemas/PaginationMeta"
+
+    ErrorResponse:
       description: Retourne une erreur rencontré par l'API
       content:
         application/json:
@@ -265,14 +361,46 @@ components:
 
   parameters:
 
-    MovieParameter:
-        in: path
-        name: movieId
-        schema:
-          type: integer
-        required: true
-        description: l'identifiant du film souhaité
-      
-        
+    MovieIdParam:
+      in: path
+      name: movieId
+      schema:
+        type: integer
+        format: int32
+      required: true
+      description: l'identifiant du film souhaité
     
-  
+    MovieNameParam:
+      in: query
+      name: name
+      schema:
+        type: string
+        description: le nom d'un ou plusieurs film a recherché
+      required: true
+
+    LimitParam:
+      in: query
+      name: limit
+      schema:
+        type: integer
+        format: int32
+        description: la limite maximal de valeurs à afficher pour une recherche
+      required: true
+      
+    PageParam:
+      in: query
+      name: page
+      schema:
+        type: integer
+        format: int32
+        description: la page actuel de l'utilisateur
+      required: true
+      
+    CategorieIdParam:
+      in: path
+      name: categorieId
+      schema:
+        type: integer
+        format: int32
+      required: true
+      description: l'identifiant de la catégorie
